# rambooster

./: CHANGELOG.md  Cargo.toml  GETTING_STARTED.md  LICENSE-APACHE  LICENSE-MIT  README.md  README_USAGE.md  demo_rb.sh  setup_shortcut.sh  uninstall.sh  update.sh  测试启动指令.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/benches/: memory_benchmark.rs
crates/core/src/: config.rs  daemon.rs  db.rs  hotkey.rs  interactive.rs  lib.rs  log_entry.rs  processes.rs  release.rs  security.rs  version.rs
crates/core/tests/: integration_tests.rs
docs/: RB_INTERACTIVE_GUIDE.md  TODO.md  USAGE.md  details.md  plans.md
rambooster-v1.0.0-macos/: INSTALL.md  README.md  cli  rb  setup_rb.sh  setup_sudo.sh
rambooster-v1.2.0-macos/: INSTALL.md  README.md  cli  rb  setup_rb.sh  uninstall.sh  update.sh
scripts/: check_rust_toolchain.sh  install.sh  test.sh
