[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "rb"
path = "src/bin/rb.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rambo-core = { path = "../core", package = "core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
