[package]
name = "core"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
libc = "0.2.176"
objc2 = "0.6.2"
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
rusqlite = { version = "0.37.0", optional = true }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8"
sysinfo = "0.37.0"
humantime = "2.1"
humantime-serde = "1.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "memory_benchmark"
harness = false

[features]
default = []
use-sysinfo = []
sqlite-log = ["dep:rusqlite"]
rusqlite = ["dep:rusqlite"]
